--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta charset="utf-8">
   <title>QR test</title>
   <script src="./jsQR.js"></script>
+  <script src="https://kit.fontawesome.com/711c10325e.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/main.css" />
   <link
     rel="shortcut icon"
@@ -15,28 +16,23 @@
       font-family: 'Ropa Sans', sans-serif;
       font-size: 40px;
       color: #333;
-      background-color: #3666b9;
+      background-color: #4b7acb;
       max-width: 640px;
       margin: 0 auto;
       position: relative;
     }
 
-    #githubLink {
-      position: absolute;
-      right: 0;
-      top: 12px;
-      color: #2D99FF;
-    }
-
     h1 {
-      margin: 30px 0;
-      font-size: 50px;
+      margin: 200px 0 60px 0;
+      color: #fff;
+      font-size: 120px;
     }
 
     #loadingMessage {
       text-align: center;
       font-size: 30px;
-      padding: 40px;
+      margin: 30px 0;
+      padding: 60px;
       background-color: #eee;
     }
 
@@ -59,6 +55,24 @@
     #noQRFound {
       text-align: center;
     }
+
+    #textbox{
+      margin: 20px 0;
+    }
+    
+    button {
+	  width: 200px;
+	  padding: 15px 0;
+      /* margin-top: 20px; */
+	  margin-bottom: 85px;
+	  border-radius: 11px;
+	  border: none;
+	  font-size: 25px;
+	  font-weight: bold;
+	  color: #fff;
+	  background-color: #ffffff00;
+      border: solid 2px;
+    }
   </style>
 </head>
 <body>
@@ -71,7 +85,8 @@
     <div id="outputMessage">QR 코드가 인식되지 않습니다.</div>
     <div hidden><b>Data:</b> <span id="outputData"></span></div>
   </div>
-  <div>data가 이게 맞나요? Data:<span id="result"></span></div>
+  <div id="textbox">맞나요? Data:<span id="result"></span></div>
+  <button onclick="location.href='success/index.html';">전송하기 <i class="fa-solid fa-notes-medical"></i></button>
   <script>
     var video = document.createElement("video");
     var canvasElement = document.getElementById("canvas");
