edit: 링크 길이 조절

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
 
     h1 {
-      margin: 200px 0 60px 0;
+      margin: 100px 0 60px 0;
       color: #fff;
       font-size: 120px;
     }
@@ -57,6 +57,8 @@
     }
 
     #textbox{
+      width: 120px;
+      text-align: center;
       margin: 20px 0;
     }
 
@@ -66,7 +68,7 @@
     }
     
     select {
-      width: 100px;
+      width: 130px;
       height: 30px;
       font-size: 20px;
     }
@@ -96,7 +98,7 @@
     <div id="outputMessage">QR 코드가 인식되지 않습니다.</div>
     <div hidden><b>Data:</b> <span id="outputData"></span></div>
   </div>
-  <div id="textbox">맞나요? Data:<span id="result"></span></div>
+  <div id="textbox">Data:<span id="result"></span></div>
   <select id="trackList">
       <option value="track1">Track 1</option>
       <option value="track2">Track 2</option>
