edit: qr 인식 data 칸 조정

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 
     .word {
         margin:100px;
+        padding: 10px 2px;
         outline: 1px solid black;
         height: 40px;
         display: block;
