edit: 카메라 칸 사라져서  조정

--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
   <p>QR 코드 인식 카메라</p>
   <div id="loadingMessage">🎥 카메라 접근을 허용해 주세요.</div>
   <canvas id="canvas" hidden></canvas>
-  <!-- <div id="output" hidden>
+  <div id="output" hidden>
     <div id="outputMessage">QR 코드가 인식되지 않습니다.</div>
-    <div hidden><b>Data:</b> <span id="outputData"></span></div>
-  </div> -->
+    <!-- <div hidden><b>Data:</b> <span id="outputData"></span></div> -->
+  </div>
   <div id="textbox">Data</div>
   <div id="textbox" class="word"><span id="result"></span></div>
   <select id="trackList">
