--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <canvas id="canvas" hidden></canvas>
   <div id="output" hidden>
     <div id="outputMessage">QR 코드가 인식되지 않습니다.</div>
-    <!-- <div hidden><b>Data:</b> <span id="outputData"></span></div> -->
+    <div hidden><b>Data:</b> <span id="outputData"></span></div>
   </div>
   <div id="textbox">Data</div>
   <div id="textbox" class="word"><span id="result"></span></div>
