--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     }
     
     select {
-      width: 130px;
-      height: 35px;
+      width: 150px;
+      height: 40px;
       font-size: 20px;
     }
 
@@ -88,13 +88,13 @@
 
     .word {
         margin:100px;
-        padding: 10px 2px;
+        padding: 10px 2px 0px 2px;
         outline: 1px solid black;
         height: 40px;
         display: block;
         color: black;
         width: 630px;
-        font-size: 20px;
+        font-size: 30px;
         font-weight: bolder !important;
         overflow: hidden;
         text-overflow: ellipsis;
