--- a/success/index.html
+++ b/success/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>QR test</title>
+  <title>QR Reader</title>
   <script src="../jsQR.js"></script>
+  <script src="https://kit.fontawesome.com/711c10325e.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../css/main.css" />
   <link
     rel="shortcut icon"
@@ -13,9 +14,9 @@
     body {
       text-align: center;
       font-family: 'Ropa Sans', sans-serif;
-      font-size: 40px;
-      color: #333;
-      background-color: #4b7acb;
+      font-size: 60px;
+      color: #fff;
+      background-color: #37b5c9;
       max-width: 640px;
       margin: 0 auto;
       position: relative;
@@ -29,99 +30,42 @@
 
     #Message {
       text-align: center;
-      font-size: 30px;
+      font-size: 40px;
+      color: rgb(8, 8, 8);
+      border-radius: 10px;
       margin: 30px 0;
-      padding: 60px;
-      background-color: #eee;
+      padding: 120px;
+      background-color: rgb(255, 255, 255);
     }
 
     #canvas {
       width: 100%;
     }
 
-    #output {
-      margin-top: 20px;
-      background: #eee;
-      padding: 10px;
-      padding-bottom: 0;
+    button {
+	    width: 240px;
+	    padding: 15px 0;
+      /* margin-top: 20px; */
+	    margin-bottom: 85px;
+	    border-radius: 11px;
+	    border: none;
+	    font-size: 25px;
+	    font-weight: bold;
+	    color: #fff;
+	    background-color: #ffffff00;
+      border: solid 2px;
     }
 
-    #output div {
-      padding-bottom: 10px;
-      word-wrap: break-word;
-    }
-
-    #noQRFound {
-      text-align: center;
-    }
-
-    #textbox{
-      margin: 20px 0;
-    }
   </style>
 </head>
 <body>
-  <h1>QR test</h1>
-  <p>QR 코드 인식 카메라</p>
+  <h1>QR Reader</h1>
+  <!-- <p>QR 코드 인식 카메라</p> -->
   <div id="Message">Success!!</div>
   <canvas id="canvas" hidden></canvas>
+  <button onclick="location.href='../index.html';">홈으로 돌아가기 <i class="fa-solid fa-arrow-rotate-left"></i></button>
   <script>
-    // var video = document.createElement("video");
-    // var canvasElement = document.getElementById("canvas");
-    // var canvas = canvasElement.getContext("2d");
-    // var loadingMessage = document.getElementById("loadingMessage");
-    // var outputContainer = document.getElementById("output");
-    // var outputMessage = document.getElementById("outputMessage");
-    // var outputData = document.getElementById("outputData");
-    // var result = document.getElementById("result");
-
-    // function drawLine(begin, end, color) {
-    //   canvas.beginPath();
-    //   canvas.moveTo(begin.x, begin.y);
-    //   canvas.lineTo(end.x, end.y);
-    //   canvas.lineWidth = 4;
-    //   canvas.strokeStyle = color;
-    //   canvas.stroke();
-    // }
-
-    // Use facingMode: environment to attemt to get the front camera on phones
-    // navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } }).then(function(stream) {
-    //   video.srcObject = stream;
-    //   video.setAttribute("playsinline", true); // required to tell iOS safari we don't want fullscreen
-    //   video.play();
-    //   requestAnimationFrame(tick);
-    // });
-
-    // function tick() {
-    //   loadingMessage.innerText = "⌛ Loading video..."
-    //   if (video.readyState === video.HAVE_ENOUGH_DATA) {
-    //     loadingMessage.hidden = true;
-    //     canvasElement.hidden = false;
-    //     outputContainer.hidden = false;
-
-    //     canvasElement.height = video.videoHeight;
-    //     canvasElement.width = video.videoWidth;
-    //     canvas.drawImage(video, 0, 0, canvasElement.width, canvasElement.height);
-    //     var imageData = canvas.getImageData(0, 0, canvasElement.width, canvasElement.height);
-    //     var code = jsQR(imageData.data, imageData.width, imageData.height, {
-    //       inversionAttempts: "dontInvert",
-    //     });
-    //     if (code) {
-    //       drawLine(code.location.topLeftCorner, code.location.topRightCorner, "#FF3B58");
-    //       drawLine(code.location.topRightCorner, code.location.bottomRightCorner, "#FF3B58");
-    //       drawLine(code.location.bottomRightCorner, code.location.bottomLeftCorner, "#FF3B58");
-    //       drawLine(code.location.bottomLeftCorner, code.location.topLeftCorner, "#FF3B58");
-    //       outputMessage.hidden = true;
-    //       outputData.parentElement.hidden = false;
-    //       outputData.innerText = code.data;
-    //       result.innerText = code.data;
-    //     } else {
-    //       outputMessage.hidden = false;
-    //       outputData.parentElement.hidden = true;
-    //     }
-    //   }
-    //   requestAnimationFrame(tick);
-    // }
+    
   </script>
 </body>
 </html>
